--- a/index.html
+++ b/index.html
@@ -142,6 +142,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="apd.html">APD</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="p3k.html">P3K</a>
+              </li>
             </ul>
           </div>
         </div>
@@ -309,6 +312,7 @@
               <li><a href="lingkungan_kerja.html">Lingkungan Kerja</a></li>
               <li><a href="keselamatan_kerja.html">Keselamatan Kerja</a></li>
               <li><a href="apd.html">APD</a></li>
+              <li><a href="p3k.html">P3K</a></li>
             </ul>
           </div>
         </div>
