--- a/keselamatan_kerja.html
+++ b/keselamatan_kerja.html
@@ -507,6 +507,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="apd.html">APD</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="p3k.html">P3K</a>
+              </li>
             </ul>
           </div>
         </div>
@@ -760,6 +763,7 @@
               <li><a href="landasan_hukum.html">Landasan Hukum</a></li>
               <li><a href="lingkungan_kerja.html">Lingkungan Kerja</a></li>
               <li><a href="apd.html">APD</a></li>
+              <li><a href="p3k.html">P3K</a></li>
             </ul>
           </div>
         </div>
