--- a/apd.html
+++ b/apd.html
@@ -122,6 +122,9 @@
               <li class="nav-item">
                 <a class="nav-link active" href="apd.html">APD</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="p3k.html">P3K</a>
+              </li>
             </ul>
           </div>
         </div>
@@ -371,6 +374,7 @@
               <li><a href="landasan_hukum.html">Landasan Hukum</a></li>
               <li><a href="lingkungan_kerja.html">Lingkungan Kerja</a></li>
               <li><a href="keselamatan_kerja.html">Keselamatan Kerja</a></li>
+              <li><a href="p3k.html">P3K</a></li>
             </ul>
           </div>
         </div>
