update menu struktur organisasi + navbar

--- a/lingkungan_kerja.html
+++ b/lingkungan_kerja.html
@@ -373,12 +373,16 @@
             <li class="nav-item">
               <a class="nav-link" href="keselamatan_kerja.html">Keselamatan Kerja</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="apd.html">APD</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="p3k.html">P3K</a>
-            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="dropdownLainnya" data-toggle="dropdown"
+                aria-haspopup="true" aria-expanded="false">
+                Lainnya
+              </a>
+              <div class="dropdown-menu" aria-labelledby="dropdownLainnya">
+                <a class="dropdown-item" href="apd.html">APD</a>
+                <a class="dropdown-item" href="p3k.html">P3K</a>
+                <a class="dropdown-item" href="strukturorganisasi.html">Struktur K3</a>
+              </div>
           </ul>
         </div>
       </div>
@@ -538,6 +542,7 @@
             <li><a href="keselamatan_kerja.html">Keselamatan Kerja</a></li>
             <li><a href="apd.html">APD</a></li>
             <li><a href="p3k.html">P3K</a></li>
+            <li><a href="strukturorganisasi.html">Struktur K3</a></li>
           </ul>
         </div>
       </div>
