--- a/p3k.html
+++ b/p3k.html
@@ -318,6 +318,15 @@
       border-top: 1px solid #e0e0e0;
     }
 
+    .site-footer a {
+      color: #6c5ce7 !important;
+      transition: color 0.3s ease;
+    }
+
+    .site-footer a:hover {
+      color: #5b4bd4 !important;
+    }
+
     @media (max-width: 768px) {
       .hero-title {
         font-size: 2.2rem;
@@ -365,12 +374,16 @@
             <li class="nav-item">
               <a class="nav-link" href="keselamatan_kerja.html">Keselamatan Kerja</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="apd.html">APD</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" href="p3k.html">P3K</a>
-            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="dropdownLainnya" data-toggle="dropdown"
+                aria-haspopup="true" aria-expanded="false">
+                Lainnya
+              </a>
+              <div class="dropdown-menu" aria-labelledby="dropdownLainnya">
+                <a class="dropdown-item" href="apd.html">APD</a>
+                <a class="dropdown-item" href="p3k.html">P3K</a>
+                <a class="dropdown-item" href="strukturorganisasi.html">Struktur K3</a>
+              </div>
           </ul>
         </div>
       </div>
@@ -745,6 +758,7 @@
             <li><a href="lingkungan_kerja.html">Lingkungan Kerja</a></li>
             <li><a href="keselamatan_kerja.html">Keselamatan Kerja</a></li>
             <li><a href="apd.html">APD</a></li>
+            <li><a href="strukturorganisasi.html">Struktur K3</a></li>
           </ul>
         </div>
       </div>
