update visi misi dan target k3(Dashboard)

--- a/index.html
+++ b/index.html
@@ -119,6 +119,15 @@
     .path {
       stroke: #6c5ce7 !important;
     }
+
+    section.section {
+      padding-top: 40px !important;
+      padding-bottom: 40px !important;
+    }
+
+    .section.bg-light+.section.bg-light {
+      margin-top: -30px !important;
+    }
   </style>
 
 </head>
@@ -247,7 +256,7 @@
           </div>
         </div>
 
-        <div class="col-md-6 col-lg-4 offset-lg-2 mb-4">
+        <div class="col-md-6 col-lg-4 offset-lg-2 mb-2">
           <div class="card shadow-sm p-4 text-center h-100">
             <span class="ion-hammer text-primary" style="font-size: 48px;"></span>
             <h3 class="mt-3">Limbah Logam Berat</h3>
@@ -256,13 +265,119 @@
           </div>
         </div>
 
-        <div class="col-md-6 col-lg-4 mb-4">
+        <div class="col-md-6 col-lg-4 mb-2">
           <div class="card shadow-sm p-4 text-center h-100">
             <span class="ion-trash-a text-primary" style="font-size: 48px;"></span>
             <h3 class="mt-3">Limbah B3 dari Rumah Tangga</h3>
             <p class="mb-0">Cat bekas, baterai bekas, dan obat-obatan yang sudah tidak terpakai.</p>
           </div>
         </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="section bg-light element-animate">
+    <div class="container">
+
+      <div class="row justify-content-center mb-5">
+        <div class="col-md-9 text-center">
+          <h2 class="heading mb-4">Visi & Misi Perusahaan</h2>
+          <p class="lead">Sebagai perusahaan pengelolaan limbah industri yang mengutamakan keselamatan dan
+            keberlanjutan, berikut visi dan misi yang menjadi dasar operasional kami.</p>
+        </div>
+      </div>
+
+      <div class="row">
+        <!-- Visi -->
+        <div class="col-md-6 mb-4">
+          <div class="card shadow-sm p-4 h-100">
+            <h3 class="text-center text-primary mb-3">Visi</h3>
+            <p class="text-center">
+              Menjadi perusahaan pengelolaan limbah B3 dan non-B3 yang unggul, terpercaya, serta berstandar
+              internasional dalam penerapan keselamatan dan kesehatan kerja.
+            </p>
+          </div>
+        </div>
+
+        <!-- Misi -->
+        <div class="col-md-6 mb-4">
+          <div class="card shadow-sm p-4 h-100">
+            <h3 class="text-center text-primary mb-3">Misi</h3>
+            <ul style="list-style: none; padding-left: 0;">
+              <li class="mb-3"><span class="ion-checkmark text-primary"></span> Mengolah limbah secara aman dan sesuai
+                regulasi.</li>
+              <li class="mb-3"><span class="ion-checkmark text-primary"></span> Menerapkan standar K3 untuk mencegah
+                kecelakaan kerja.</li>
+              <li class="mb-3"><span class="ion-checkmark text-primary"></span> Mengembangkan SDM yang kompeten.</li>
+              <li class="mb-3"><span class="ion-checkmark text-primary"></span> Menggunakan teknologi ramah lingkungan.
+              </li>
+              <li class="mb-3"><span class="ion-checkmark text-primary"></span> Menjalin kolaborasi dengan industri &
+                pemerintah.</li>
+            </ul>
+          </div>
+        </div>
+
+      </div>
+    </div>
+  </section>
+
+  <!-- Section  Rencana Tahunan  -->
+  <section class="section element-animate">
+    <div class="container">
+
+      <div class="row justify-content-center mb-5">
+        <div class="col-md-9 text-center">
+          <h2 class="heading mb-4">Rencana Tahunan K3</h2>
+          <p class="lead">
+            Rencana tahunan K3 disusun berdasarkan evaluasi kecelakaan kerja di tahun-tahun sebelumnya
+            untuk memastikan peningkatan keselamatan, pencegahan risiko, dan pengembangan lingkungan kerja yang sehat
+            dan aman.
+          </p>
+        </div>
+      </div>
+
+      <div class="row">
+
+        <!-- Tahun 2023 -->
+        <div class="col-md-4 mb-4">
+          <div class="card shadow-sm p-4 h-100 text-center">
+            <span class="ion-alert-circled text-primary" style="font-size: 50px;"></span>
+            <h4 class="mt-3">Tahun 2023</h4>
+            <p class="mb-1">Jumlah Kecelakaan Kerja:</p>
+            <h2 class="text-primary">5 Kasus</h2>
+            <p class="small text-muted mt-3">
+              Fokus tahun 2023: Penguatan SOP penggunaan APD dan peninjauan ulang jalur evakuasi.
+            </p>
+          </div>
+        </div>
+
+        <!-- Tahun 2024 -->
+        <div class="col-md-4 mb-4">
+          <div class="card shadow-sm p-4 h-100 text-center">
+            <span class="ion-android-warning text-primary" style="font-size: 50px;"></span>
+            <h4 class="mt-3">Tahun 2024</h4>
+            <p class="mb-1">Jumlah Kecelakaan Kerja:</p>
+            <h2 class="text-primary">3 Kasus</h2>
+            <p class="small text-muted mt-3">
+              Fokus tahun 2024: Pelatihan keselamatan tambahan & peningkatan peralatan pemantauan gas berbahaya.
+            </p>
+          </div>
+        </div>
+
+        <!-- Tahun 2025 -->
+        <div class="col-md-4 mb-4">
+          <div class="card shadow-sm p-4 h-100 text-center">
+            <span class="ion-ios-analytics-outline text-primary" style="font-size: 50px;"></span>
+            <h4 class="mt-3">Tahun 2025</h4>
+            <p class="mb-1">Target Jumlah Kecelakaan Kerja:</p>
+            <h2 class="text-primary">0 Kasus</h2>
+            <p class="small text-muted mt-3">
+              Fokus tahun 2025: Zero Accident Program, inspeksi rutin, digitalisasi pelaporan risiko, dan audit K3
+              berkala.
+            </p>
+          </div>
+        </div>
+
       </div>
     </div>
   </section>
