--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
 
       <div class="row justify-content-center mb-5">
         <div class="col-md-9 text-center">
-          <h2 class="heading mb-4">Visi & Misi Perusahaan</h2>
+          <h2 class="heading mb-4">Kebijakan dan Regulasi</h2>
           <p class="lead">Sebagai perusahaan pengelolaan limbah industri yang mengutamakan keselamatan dan
             keberlanjutan, berikut visi dan misi yang menjadi dasar operasional kami.</p>
         </div>
@@ -291,7 +291,6 @@
         <!-- Visi -->
         <div class="col-md-6 mb-4">
           <div class="card shadow-sm p-4 h-100">
-            <h3 class="text-center text-primary mb-3">Visi</h3>
             <p class="text-center">
               Menjadi perusahaan pengelolaan limbah B3 dan non-B3 yang unggul, terpercaya, serta berstandar
               internasional dalam penerapan keselamatan dan kesehatan kerja.
@@ -299,10 +298,10 @@
           </div>
         </div>
 
+        
         <!-- Misi -->
         <div class="col-md-6 mb-4">
           <div class="card shadow-sm p-4 h-100">
-            <h3 class="text-center text-primary mb-3">Misi</h3>
             <ul style="list-style: none; padding-left: 0;">
               <li class="mb-3"><span class="ion-checkmark text-primary"></span> Mengolah limbah secara aman dan sesuai
                 regulasi.</li>
