membenarkan tabel, dan menabah drodown

--- a/landasan_hukum.html
+++ b/landasan_hukum.html
@@ -614,6 +614,7 @@
                 <a class="dropdown-item" href="apd.html">APD</a>
                 <a class="dropdown-item" href="p3k.html">P3K</a>
                 <a class="dropdown-item" href="strukturorganisasi.html">Struktur K3</a>
+                <a class="dropdown-item" href="manajemenresiko.html">Manajemen Resiko</a>
               </div>
           </ul>
         </div>
