--- a/apd.html
+++ b/apd.html
@@ -183,6 +183,7 @@
                 <a class="dropdown-item" href="apd.html">APD</a>
                 <a class="dropdown-item" href="p3k.html">P3K</a>
                 <a class="dropdown-item" href="strukturorganisasi.html">Struktur K3</a>
+                <a class="dropdown-item" href="audit.html">Audit K3</a>
               </div>
           </ul>
         </div>
@@ -531,6 +532,7 @@
             <li><a href="keselamatan_kerja.html">Keselamatan Kerja</a></li>
             <li><a href="p3k.html">P3K</a></li>
             <li><a href="strukturorganisasi.html">Struktur K3</a></li>
+            <li><a href="audit.html">Audit K3</a></li>
           </ul>
         </div>
       </div>
