--- a/strukturorganisasi.html
+++ b/strukturorganisasi.html
@@ -382,6 +382,7 @@
                                 <a class="dropdown-item" href="apd.html">APD</a>
                                 <a class="dropdown-item" href="p3k.html">P3K</a>
                                 <a class="dropdown-item" href="strukturorganisasi.html">Struktur K3</a>
+                                <a class="dropdown-item" href="audit.html">Audit K3</a>
                             </div>
                         </li>
                     </ul>
@@ -599,6 +600,7 @@
                         <li><a href="apd.html">APD</a></li>
                         <li><a href="p3k.html">P3K</a></li>
                         <li><a href="strukturorganisasi.html">Struktur K3</a></li>
+                        <li><a href="audit.html">Audit K3</a></li>
                     </ul>
                 </div>
             </div>
